# BaseDeDatos

./: compilar  consultas.org  explicacion.lty
Correcciones/: .gitignore  CMakeLists.txt  consultas.org
Correcciones/src/: BaseDeDatos.cpp  BaseDeDatos.h  Indice.h  Registro.cpp  Tabla.h  join_iterator.h  linear_set.h  string_map.h  string_map.hpp
bateriaTestsAlgo2/: CMakeLists.txt
bateriaTestsAlgo2/bateriaTestsAlgo2/: CMakeLists.txt  compilar
bateriaTestsAlgo2/bateriaTestsAlgo2/src/: .Dato.h.swp
bateriaTestsAlgo2/src/: .string_map.h.swp  Tabla.cpp  Tabla.h  main.cpp  string_map.h  string_map.h.save  string_map.hpp  string_map_final.h  string_map_final.hpp
bateriaTestsAlgo2/tests/: string_map_test.cpp
docs/html/: BaseDeDatos_8h_source.html  Dato_8h_source.html  Indice_8h_source.html  Registro_8h_source.html  Restriccion_8h_source.html  Tabla_8h_source.html  annotated.html  classBaseDeDatos-members.html  classBaseDeDatos.html  classBaseDeDatos__coll__graph.dot  classBaseDeDatos__coll__graph.md5  classDato-members.html  classDato.html  classDato__coll__graph.dot  classDato__coll__graph.md5  classIndice-members.html  classIndice.html  classIndice__coll__graph.dot  classIndice__coll__graph.md5  classRegistro-members.html  classRegistro.html  classRegistro__coll__graph.dot  classRegistro__coll__graph.md5  classRestriccion-members.html  classTabla.html  (+68 more)
src/: BaseDeDatos.cpp  BaseDeDatos.h  Indice.h  Registro.h  Tabla.cpp  Tabla.h  join_iterator.h  string_map.h  string_map.hpp
tests/: base_de_datos_test.cpp  registro_test.cpp  string_map_test.cpp  tabla_test.cpp
(+83 files in other folders)
